Change wordpress root

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,7 @@
-/mariadb
-/wp-admin
-!/wp-content/
-/wp-content/*
-!/wp-content/themes/
-/wp-content/themes/*
-!/wp-content/themes/klopvaart-intranet/
-/wp-includes
-/.htaccess
-/license.txt
-/readme.html
-/*.php
+/database
+/wordpress/*
+!/wordpress/wp-content/
+/wordpress/wp-content/*
+!/wordpress/wp-content/themes/
+/wordpress/wp-content/themes/*
+!/wordpress/wp-content/themes/klopvaart-intranet/
