--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 !/wordpress/wp-content/themes/
 /wordpress/wp-content/themes/*
 !/wordpress/wp-content/themes/klopvaart-intranet/
+!/wordpress/wp-content/themes/knock-knock/
