Ignore .DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /wordpress/wp-content/themes/*
 !/wordpress/wp-content/themes/klopvaart-intranet/
 !/wordpress/wp-content/themes/knock-knock/
+
+wordpress/wp-content/themes/knock-knock/.DS_Store
